--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="write up">
                 <p>
-                My name is Cameron Hurley.  I graduated from Plymouth State University in 2011 with a Bachelors Degree in Marketing.  After graduating I moved down to Boston for 4 years where I worked in various restaurant, retail, and managerial roles.  I moved back to my homestate of NH in 2015 where I continued to work in sales.  I have always been intruiged by the Technology field and coding in general, prompting me to enroll into a coding bootcamp to pursue a career in Web/Software Development.
+                My name is Cameron Hurley.....  I graduated from Plymouth State University in 2011 with a Bachelors Degree in Marketing.  After graduating I moved down to Boston for 4 years where I worked in various restaurant, retail, and managerial roles.  I moved back to my homestate of NH in 2015 where I continued to work in sales.  I have always been intruiged by the Technology field and coding in general, prompting me to enroll into a coding bootcamp to pursue a career in Web/Software Development.
                 <br>
                 <br>
                 I am an avid fisherman of Striped Bass and try to get out on the water in any free time I have.  I also am a huge Boston sports fan with football being my favorite.  I also enjoy going to the beach, hiking, travelling to new places, and hanging out with friends.
